# PatchOps

./: .gitignore  README.md  pyproject.toml
docs/: bootstrap_repair.md  bundle_authoring_template.md  bundle_contract_packet.md  bundle_native_zip_transition.md  bundle_regression_gate.md  bundle_release_readiness.md  bundle_smoke_gate.md  command_matrix.md  common_mistakes_and_guardrails.md  compatibility_notes.md  doc_reading_order.md  examples.md  failure_repair_guide.md  final_freeze_export.md  final_release_maintenance_gate.md  finalization_master_plan.md  first_real_trader_run_checklist.md  git_traceability_hygiene.md  github_publish_helper.md  handoff_surface.md  llm_usage.md  maintenance_freeze_packet.md  maintenance_gate.md  manifest_schema.md  native_zip_transition.md  operational_patch_types.md  operator_quickstart.md  operator_script_emitter.md  overview.md  packet_contract.md  patch_ledger.md  patchops_final_reference.md  phase_c_backup_write_readiness.md  post_publish_snapshot.md  powershell_runner_guardrails.md  profile_matrix.md  profile_system.md  project_packet_contract.md  project_packet_workflow.md  project_status.md  (+16 more)
examples/: generic_allowed_exit_patch.json  generic_backup_patch.json  generic_cleanup_archive_patch.json  generic_content_path_patch.json  generic_python_patch.json  generic_python_powershell_patch.json  generic_python_powershell_verify_patch.json  generic_report_dir_patch.json  generic_report_prefix_patch.json  generic_smoke_audit_patch.json  generic_verify_patch.json  trader_code_patch.json  trader_doc_patch.json  (+3 more)
patchops/: cli.py  (+23 more)
(+1977 files in other folders)
