[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchops"
version = "0.1.0"
description = "Project-agnostic patch execution harness with manifest-driven reporting"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = []

[project.scripts]
patchops = "patchops.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["patchops*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
